--- a/style.css
+++ b/style.css
@@ -186,19 +186,19 @@ ul{
     left: 10px;
 }
 .examples:nth-child(1){
-    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(Assets/asset 37.jpeg);
+    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(Assets/asset\ 37.jpeg);
     background-size: cover;
 }
 .examples:nth-child(2){
-    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(Assets/asset 36.jpeg);
+    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(Assets/asset\ 36.jpeg);
     background-size: cover;
 }
 .examples:nth-child(3){
-    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(Assets/asset 38.jpeg);
+    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(Assets/asset\ 38.jpeg);
     background-size: cover;
 }
 .examples:nth-child(4){
-    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(Assets/asset 39.jpeg);
+    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(Assets/asset\ 39.jpeg);
     background-size: cover;
 }
 .cta-section{
